# brackets

./: .gitignore  2  Cargo.toml  README.md  configuration.yml  nx.json  package-lock.json  package.json
server/: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.override.yml  docker-compose.yml  project.json
server/.sqlx/: query-1d80cd15734006a1f4655db63c2c107c0c0c3efe949d6683ab4a2ce12b2ae609.json  query-2cd16d1ac2ff297919546b26f5be7c677dd84847cd54f80e4c16b1f3c621b11b.json  query-34bfdde3f7cb76d9c401ec36c80ded30b23b4aa2ffc501e9dd79df42c3545b53.json  query-40311d6a54d112c74843f2881438ec849fdd7aa871fadf05e9a7ef298b5e57e6.json  query-513532ca6663e8e0c27246f61109dee7a5053170e1c7c4c37cb78fd0d085db94.json  query-6e3c7c64420145f6b8501a5c30f50744b540bdaf3d39098f19dc69d89f619cff.json  query-71415966436a5635177657049256ac9980b187aa12c17f41c755cfca2af1ae8b.json  query-9905c5d9c7e1ca4380701644bfd8cff6551d784608a8881d02ac03e0faf7af75.json  query-b4aa3bfd19a7e9058b008e7b7ee32181370c9a90965378d0c15345ba462185a4.json  query-c57496df76c3c9fff953aca4c14d7c3374f2ac46bf9cc12c3e4cbf7d2041ff27.json  query-cadbbbd5879e542f01b16a52988f430a7fc4c68a555abc3dacb0586788f6855a.json  query-d1e6d931b72dd4f4b822c40dfb657b72414444d842286e963723514f0d15c762.json  query-d990c1c2c9a4d560158b9eca31c598131a6c284c0cbbce6238c2e4f9c74c687f.json  query-f51f3a6aa5ae9bf7b401832426cc0952a2e5c499be807b8b4ca1661d0e9771f6.json
server/Blog/: Blog.csproj
server/Blog.API/: Blog.API.csproj  Dockerfile  Program.cs
server/Blog.API/Properties/: launchSettings.json
server/Blog/Commons/Behaviors/: AuthorizationBehavior.cs  LoggingBehavior.cs  UnhandledExceptionBehavior.cs  ValidationBehavior.cs
server/Blog/Commons/CQRS/: ICommand.cs  ICommandHandler.cs  IQuery.cs  IQueryHandler.cs
server/Blog/Commons/Exceptions/: ConflictException.cs  NotFoundException.cs  ValidationException.cs
server/Blog/Commons/Interfaces/: IReadRepository.cs  IWriteRepository.cs
server/Blog/Entities/: Comment.cs  LikeComment.cs  LikePost.cs  Post.cs  PostTag.cs  Tag.cs  User.cs  UsersInfo.cs
server/Blog/Extensions/: ApiVersioningExtension.cs  Infrastructure.cs  JwtExtension.cs  MediatRExtension.cs
server/Blog/Migrations/: 20230717112303_DbInit.Designer.cs  20230717112303_DbInit.cs  20230718221838_AddLikes.Designer.cs  20230718221838_AddLikes.cs  ApplicationDbContextModelSnapshot.cs
server/Blog/Persistence/: ApplicationDbContext.cs  RepositoryBase.cs
server/configuration/: base.yaml  local.yaml  production.yaml
server/migrations/: 20240112214853_db_init.sql  20240115205956_db_likes.sql
server/scripts/: init_db.sh
server/src/: app_state.rs  configuration.rs  errors.rs  lib.rs  main.rs  startup.rs  telemetry.rs
server/src/app/: comments.rs  follows.rs  likes.rs  mod.rs  posts.rs  users.rs
server/src/app/users/: auth.rs  (+2 more)
server/src/domains/: mod.rs
server/src/models/: auth.rs  comments.rs  error_response.rs  mod.rs  page_filters.rs  posts.rs  users.rs
server/src/persistence/: auth.rs  comments.rs  follows.rs  likes.rs  mod.rs  posts.rs  users.rs
server/src/routes/: auth.rs  comments.rs  follows.rs  health_check.rs  mod.rs  posts.rs  users.rs
server/src/utils/: filter_app_err.rs  jwt.rs  mod.rs
server/tests/api/: health_check.rs  helpers.rs  main.rs
(+440 files in other folders)
