[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = {version = "1", features = ["derive"]}
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
config = "0.13.4"
chrono = { version = "0.4.31", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7.9"
tracing-log = "0.2.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
argon2 = { version = "0.5.2", features = ["std"] }
password-hash = "0.5.0"
jsonwebtoken = "9.2.0"
rand = "0.8.5"
actix-web-httpauth = "0.8.1"

[dependencies.sqlx]
version = "0.7.3"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "macros",
    "migrate",
    "chrono",
  "bit-vec"
]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
