[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = {version = "1", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.8", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
thiserror = "1"
cookie = "0.18"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
unicode-segmentation = "1"
fake = "2"

[dev-dependencies]
claims = "0.7"
once_cell = "1"
wiremock = "0.6"
serde_json = "1"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "macros",
    "migrate",
    "chrono",
    "bit-vec"
]

[dependencies.uuid]
version = "1"
features = [
    "v7",
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
